fix: Only nowrap in navbar and navbar-* elements

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -75,7 +75,11 @@ html {
   scroll-behavior: smooth;
 }
 
-* {
+[class^="status-"] {
+  white-space: nowrap;
+}
+
+navbar {
   white-space: nowrap;
 }
 
